# HPC_Project

./: .gitignore  README.md  run_cpu_distributed.sh  run_cpu_shared.sh  run_gpu_shared.sh  run_serial.sh
slurm/: run_cpu_dist_strong_1.slurm  run_cpu_dist_strong_16.slurm  run_cpu_dist_strong_2.slurm  run_cpu_dist_strong_4.slurm  run_cpu_dist_strong_8.slurm  run_cpu_dist_weak_16.slurm  run_cpu_dist_weak_2.slurm  run_cpu_dist_weak_32.slurm  run_cpu_dist_weak_4.slurm  run_cpu_dist_weak_8.slurm  run_gpu_dist_strong_1.slurm  run_gpu_dist_strong_2.slurm  run_gpu_dist_strong_3.slurm  run_gpu_dist_weak_16.slurm  run_gpu_dist_weak_32.slurm  run_gpu_dist_weak_4.slurm  run_gpu_dist_weak_8.slurm
src/: bres  bresenham_serial.cpp  compare_datasets.cpp
src/cpu_distributed/: a.out  cpu_distributed  cpu_distributed.cpp  helper_functions.cpp  helper_functions.hpp
src/cpu_shared/: CMakeLists.txt  cpu_shared.cpp  helper_functions.cpp
src/gpu_distributed/: CMakeLists.txt  gpu_distributed  gpu_distributed.cpp  helper_functions.cpp  helper_functions.hpp  kernel.cu
src/gpu_shared/: CMakeLists.txt  helper_functions.cpp  helper_functions.hpp  kernel.cu  main.cpp
src/serial/: CMakeLists.txt  helper_functions.cpp  helper_functions.hpp  serial.cpp
